crates/crochet_parser/src/snapshots/crochet__parser__tests__destructuring-4.snap
---
source: src/parser/mod.rs
expression: "parse(\"let [a, b, ...rest] = letters\")"
---
Program {
    body: [
        VarDecl {
            span: 0..29,
            pattern: Array(
                ArrayPat {
                    span: 4..20,
                    elems: [
                        Some(
                            Ident(
                                BindingIdent {
                                    span: 5..6,
                                    id: Ident {
                                        span: 5..6,
                                        name: "a",
                                    },
                                    type_ann: None,
                                },
                            ),
                        ),
                        Some(
                            Ident(
                                BindingIdent {
                                    span: 8..9,
                                    id: Ident {
                                        span: 8..9,
                                        name: "b",
                                    },
                                    type_ann: None,
                                },
                            ),
                        ),
                        Some(
                            Rest(
                                RestPat {
                                    span: 11..18,
                                    arg: Ident(
                                        BindingIdent {
                                            span: 14..18,
                                            id: Ident {
                                                span: 14..18,
                                                name: "rest",
                                            },
                                            type_ann: None,
                                        },
                                    ),
                                    type_ann: None,
                                },
                            ),
                        ),
                    ],
                    optional: false,
                    type_ann: None,
                },
            ),
            init: Some(
                Ident(
                    Ident {
                        span: 22..29,
                        name: "letters",
                    },
                ),
            ),
            declare: false,
        },
    ],
}
