crates/crochet_parser/src/snapshots/crochet__parser__tests__destructuring-6.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = ([a, b]) => a\")"
---
Program {
    body: [
        VarDecl {
            span: 0..23,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..23,
                        params: [
                            Array(
                                ArrayPat {
                                    span: 11..17,
                                    elems: [
                                        Some(
                                            Ident(
                                                BindingIdent {
                                                    span: 12..13,
                                                    id: Ident {
                                                        span: 12..13,
                                                        name: "a",
                                                    },
                                                    type_ann: None,
                                                },
                                            ),
                                        ),
                                        Some(
                                            Ident(
                                                BindingIdent {
                                                    span: 15..16,
                                                    id: Ident {
                                                        span: 15..16,
                                                        name: "b",
                                                    },
                                                    type_ann: None,
                                                },
                                            ),
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: None,
                                },
                            ),
                        ],
                        body: Ident(
                            Ident {
                                span: 22..23,
                                name: "a",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
