crates/crochet_parser/src/snapshots/crochet__parser__tests__literals-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"1.23\")"
---
Program {
    body: [
        Expr {
            span: 0..4,
            expr: Lit(
                Num(
                    Num {
                        span: 0..4,
                        value: "1.23",
                    },
                ),
            ),
        },
    ],
}
