crates/crochet_parser/src/snapshots/crochet__parser__tests__literals-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"\\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..7,
            expr: Lit(
                Str(
                    Str {
                        span: 0..7,
                        value: "hello",
                    },
                ),
            ),
        },
    ],
}
