crates/crochet_parser/src/snapshots/crochet__parser__tests__operations-6.snap
---
source: src/parser/mod.rs
expression: "parse(\"a > b\")"
---
Program {
    body: [
        Expr {
            span: 0..5,
            expr: Op(
                Op {
                    span: 0..5,
                    op: Gt,
                    left: Ident(
                        Ident {
                            span: 0..1,
                            name: "a",
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 4..5,
                            name: "b",
                        },
                    ),
                },
            ),
        },
    ],
}
